# paper-grabber

./: .gitignore  README.md  SETUP.md  pyproject.toml
deploy/: DEPLOY.md  HETZNER.md  research-stream.service
scripts/: daily.sh  demo.sh
src/paper_grabber/: __init__.py  abstracts.py  bibtex.py  cache.py  chain.py  clean.py  cli.py  drive.py  enrich.py  fetch.py  filename.py  gmail.py  google_auth.py  imap_source.py  jobs.py  ledger.py  models.py  oauth_web.py  parse.py  providers.py  refresh.py  server.py  staging.py  suggest.py  uploader.py
src/paper_grabber/static/: index.html  manifest.webmanifest  sw.js
systemd/: research-stream-sync.service  research-stream-sync.timer
tests/: conftest.py  test_abstracts.py  test_bibtex.py  test_cache.py  test_chain.py  test_clean.py  test_drive.py  test_enrich.py  test_fetch.py  test_filename.py  test_gmail.py  test_imap.py  test_ledger.py  test_oauth_web.py  test_parse.py  test_refresh.py  test_server.py  test_staging.py  test_suggest.py  test_uploader.py
tests/data/: quantum-abstract-machine.eml  quantum-computer-architecture-2.eml  quantum-computer-architecture.eml
